# k3screenctrl

./: Makefile.in  README
firmware/: app.1.1.115.hex  app.1.2.113.hex  app.1.2.115.hex
lib/: Makefile  Makefile.am  Makefile.in
lib/k3screenctrl/: basic.sh  host.sh  port.sh  wan.sh  weather.sh  wifi.sh
src/: Makefile.am  Makefile.in  config.c  config.h  debug.c  debug.h  firmware_upgrade.c  gpio.h  handlers.c  infocenter.c  k3screenbg.c  main.c  mcu_proto.h  pages.c  requests.c  signals.c
